{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 11,
  "lineage": "aa1698af-173d-b303-89d4-449ad668fd71",
  "resources": [
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:726332586568:security-group/sg-081381f66da42417b",
            "description": "Security group for ipa-transcoder",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081381f66da42417b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Open to Inner",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Open to Inner",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ipa-transcoder-20190730234141469500000001",
            "name_prefix": "ipa-transcoder-",
            "owner_id": "726332586568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ipa-transcoder"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e69ca109fd8fd88b"
          }
        }
      ]
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "Open to Inner",
            "from_port": 80,
            "id": "sgrule-2948242732",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-081381f66da42417b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          }
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "Open to Inner",
            "from_port": 9000,
            "id": "sgrule-2567659218",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-081381f66da42417b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9000,
            "type": "ingress"
          }
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-336023666",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-081381f66da42417b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3020685208",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-081381f66da42417b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    },
    {
      "module": "module.transcoder.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws.core",
      "instances": []
    }
  ]
}